@@ -50,7 +50,7 @@
         }                                                                  \
     }
 
-int
+static int
 BSIM4DioIjthVjmEval(
 double Nvtm, double Ijth, double Isb, double XExpBV,
 double *Vjm)
